--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Moon Facts</title>
+    <title>Random Moon Facts</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -23,39 +23,37 @@
             cursor: pointer;
         }
 
-        #factsDisplay {
-            margin-top: 20px;
-            padding: 10px;
-            background-color: white;
-            border: 1px solid #ccc;
-            border-radius: 5px;
+        main {
+            text-align: center;
+            font-size: 18px;
         }
     </style>
 </head>
 <body>
     <header>
-        <h1>Moon Facts</h1>
-        <button id="showFactsBtn">Show Random Moon Fact</button>
+        <h1>Random Moon Facts</h1>
+        <button id="newFactButton">Get a Random Fact</button>
     </header>
-    <section id="factsDisplay"></section>
+    <main>
+        <p id="factDisplay">Click the button to see a random fact!</p>
+    </main>
     <script>
-        const moonFacts = [
+        const facts = [
             "The Moon is Earth's only natural satellite.",
             "The Moon is about 1/6th the size of Earth.",
             "The Moon has a diameter of approximately 3,474 kilometers.",
             "The Moon is about 384,400 kilometers away from Earth.",
             "The Moon has no atmosphere, which means it cannot support life.",
-            "The Moon's surface is covered with craters, mountains, and flat plains called 'maria.'",
-            "The Moon takes about 27.3 days to orbit the Earth.",
+            "The Moon's surface is covered with craters, mountains, and flat plains called maria.",
+            "It takes about 27.3 days for the Moon to orbit the Earth.",
             "The same side of the Moon always faces Earth due to synchronous rotation.",
             "The Moon influences Earth's tides through its gravitational pull.",
             "The first human to walk on the Moon was Neil Armstrong in 1969."
         ];
 
-        document.getElementById('showFactsBtn').addEventListener('click', function() {
-            const factsDisplay = document.getElementById('factsDisplay');
-            const randomIndex = Math.floor(Math.random() * moonFacts.length);
-            factsDisplay.innerHTML = moonFacts[randomIndex]; // Display a random fact
+        document.getElementById('newFactButton').addEventListener('click', function() {
+            const randomIndex = Math.floor(Math.random() * facts.length);
+            document.getElementById('factDisplay').innerText = facts[randomIndex];
         });
     </script>
 </body>
